# ScrcpyForAndroid

./: .gitignore  CHANGELOG.md  README.md  ScrcpyForAndroid.code-workspace  TODO.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/io/github/miuzarte/scrcpyforandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/miuzarte/scrcpyforandroid/: LockscreenPasswordActivity.kt  MainActivity.kt  NativeCoreFacade.kt  StreamActivity.kt
app/src/main/java/io/github/miuzarte/scrcpyforandroid/constants/: AppDefaults.kt  AppPreferenceKeys.kt  Defaults.kt  ScrcpyPresets.kt  UiAndroidKeycodes.kt  UiMotion.kt  UiSpacing.kt
app/src/main/java/io/github/miuzarte/scrcpyforandroid/haptics/: AppHaptics.kt
app/src/main/java/io/github/miuzarte/scrcpyforandroid/models/: DeviceModels.kt
app/src/main/java/io/github/miuzarte/scrcpyforandroid/nativecore/: AdbMdnsDiscoverer.kt  AdbPairingTypes.kt  AnnexBDecoder.kt  DirectAdbClient.kt  DirectAdbPairingClient.kt  NativeAdbService.kt  PersistentVideoRenderer.kt  ScrcpyAudioPlayer.kt  ScrcpySessionManager.kt
app/src/main/java/io/github/miuzarte/scrcpyforandroid/pages/: AboutScreen.kt  AdvancedConfigPage.kt  DevicePage.kt  MainPage.kt  (+16 more)
app/src/main/jni/: CMakeLists.txt  adb_pairing.cpp  adb_pairing.h  logging.h
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/miuzarte/scrcpyforandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+55 files in other folders)
